Bug 118065 - UI - Reodering animations is extremely slow
Summary: UI - Reodering animations is extremely slow
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
3.6.7.2 release
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: Brian Fraser
URL:
Whiteboard: target:6.2.0
Keywords: haveBacktrace, perf
Depends on:
Blocks: Sidebar-Animation
  Show dependency treegraph
 
Reported: 2018-06-08 09:36 UTC by Afief Halumi
Modified: 2018-10-01 07:53 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
Example file (12.84 KB, application/vnd.oasis.opendocument.presentation)
2018-06-22 11:26 UTC, Buovjaga
Details
Callgrind output from master (1011.15 KB, application/x-xz)
2018-06-22 11:26 UTC, Buovjaga
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Afief Halumi 2018-06-08 09:36:11 UTC
Working on a presentation with multiple animations I often find that I have to reorder the different animations.

Unfortunately the only way to reorder the animations is to press "move up" or "move down", and clicking those buttons has an extremely noticable lag. Removing the lag would be a great way to make working on animations in Impress more convenient.

Adding a way to drag and drop to reorder the animations would be great as well, but the lag affects everything in the animation panel.

System: Kubuntu 18.04
Comment 1 Buovjaga 2018-06-21 18:32:04 UTC Comment hidden (obsolete)
Comment 2 Afief Halumi 2018-06-21 19:24:31 UTC
There is still a delay (estimate between 0.25 and 0.5 sec) between pressing the button and the list updating in the UI.

I also noticed that when adding a new animation the animation list is updated instantaneously, but flickers again (redrawing?) after a similar delay as happens when reordering.

Test:
Create empty slideshow.
Draw five stars.
Add animations to all of them.
Select last star and press "move up" in animation panel.
Comment 3 Buovjaga 2018-06-22 11:26:25 UTC
Created attachment 143029 [details]
Example file

Sorry for my silly question, for some reason I thought you were talking about animated GIFs.

The slowness is already in 3.6.7

Arch Linux 64-bit
Version: 6.2.0.0.alpha0+
Build ID: 0929a98acca8ec4d86caa97d3090a39f89f35f90
CPU threads: 8; OS: Linux 4.17; UI render: default; VCL: kde4; 
Locale: fi-FI (fi_FI.UTF-8); Calc: group threaded
Built on June 20th 2018

Arch Linux 64-bit
Version 3.6.7.2 (Build ID: e183d5b)
Comment 4 Buovjaga 2018-06-22 11:26:46 UTC
Created attachment 143030 [details]
Callgrind output from master
Comment 5 Buovjaga 2018-06-22 11:29:30 UTC
The drag'n'drop request is bug 37483
Comment 6 Commit Notification 2018-09-27 06:39:06 UTC
Brian Fraser committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=1fb688b2e13da39b8099a3f4ba58dc9aeef8d723

tdf#118065 Fix slow Impress custom animation sidebar update

It will be available in 6.2.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Brian Fraser 2018-10-01 07:53:41 UTC
Delay was caused by a 0.5s timer which was doing a UI refresh after most changes to animations. The timer has been changed to 0.05s (50ms), which makes the UI significantly more responsive.