tdf#118065 Fix slow Impress custom animation sidebar update

Timer MainSequence::maTimer dropped from 500ms to 50ms.
Reorder declarations of UI elements in CustomAnimationPane.hxx
to be more intuitive and reflect order shown in UI.

Change-Id: I2857dbbd6a4131c4ca6f9a054132f34056e95338
Reviewed-on: https://gerrit.libreoffice.org/61019
Tested-by: Jenkins
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>